...
                if canAdd, let value {
                    Button("Save \(option.format(option.rounded(value))) as Preset", systemImage: "plus.circle") {
                        health.addPreset(value, for: metric, in: option)
                    }
                }
                if canReset {
                    Button("Restore Default Presets", systemImage: "arrow.counterclockwise") {
                        health.resetPresets(for: metric, in: option)
                    }
                }
            } header: {
                Text("Presets")
            } footer: {
...
